@@ -1,6 +1,7 @@
 CHANGES IN VERSION 2.99.1
 ------------------------
  o export buildGOmap <2016-04-08, Fri>
+ o fixed enrichDAVID according to https://support.bioconductor.org/p/72188/ <2016-04-08, Fri>
  
 CHANGES IN VERSION 2.99.0
 ------------------------
